Align cr-issue-meta vertically, the inside alread has 0.5em padding.

--- a/ui/components/cr-issue.css
+++ b/ui/components/cr-issue.css
@@ -37,7 +37,7 @@ cr-issue-messages {
 cr-issue-meta {
     flex-shrink: 0;
     width: 300px;
-    padding: 1em 16px;
+    padding: 0.5em 16px;
 }
 
 header {
